--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
                 <div class="d-flex justify-content-end">
                     <div class="btn-group dropstart mb-3">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            Sorting
+                            Sort: {{ sorting_type }}
                         </button>
                         <ul class="dropdown-menu">
                             <!-- Dropdown menu links -->
