--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,8 +25,8 @@
                         <li class="nav-item"><a class="nav-link" href="#repos">Repositories</a></li>
                     </ul>
                     <form class="d-flex">
-                        <input type="text" class="form-control" placeholder="Repository name" aria-label="Repository name" aria-describedby="button-search2">
-                        <button class="btn btn-outline-secondary" type="submit" id="button-search2">
+                        <input type="text" class="form-control" placeholder="Repository name" name="search" aria-label="Repository name" aria-describedby="button-search">
+                        <button class="btn btn-outline-secondary" type="submit" id="button-search">
                             <i class="bi bi-search me-1"></i>
                         </button>
                     </form>
@@ -45,12 +45,6 @@
         <!-- Section-->
         <section class="py-5" id="repos">
             <div class="container px-4 px-lg-5">
-                <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="input-group mb-3">
-                        <input id="input-search" type="text" class="form-control" placeholder="Repository name (No implementation)" aria-label="Repository name" aria-describedby="button-search" onkeyup="search()">
-                        <button class="btn btn-outline-secondary" type="button" id="button-search">Search</button>
-                    </div>
-                </div> -->
                 <div class="d-flex justify-content-end">
                     <div class="btn-group dropstart mb-3">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
