--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,9 +91,12 @@
                     {% for i in repos %}
                     <div class="col mb-5">
                         <div class="card h-100">
-                            {% if repos[i].star %}
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{ repos[i].star }} ⭐</div>
-                            {% endif %}
+                            <div class="card-header">
+                                <input class="form-check-input" type="checkbox" value="repo_{{ i }}" name="download">
+                                {% if repos[i].star %}
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{ repos[i].star }} ⭐</div>
+                                {% endif %}
+                            </div>
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <h5 class="fw-bolder repo-name">{{ repos[i].name }}</h5>
