--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,7 +77,7 @@
                             }
                         </script>
                         <!-- Sorting Buttons -->
-                        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn btn-secondary dropdown-toggle ms-2" data-bs-toggle="dropdown" aria-expanded="false">
                             Sort: {{ sorting_type }}
                         </button>
                         <ul class="dropdown-menu">
